[project]
name = "fastapi-with-google-rye"
version = "0.1.0"
description = "A simple project demonstrating the use of fastapi with google oauth2"
authors = [{ name = "tomit4", email = "mosssap@gmail.com" }]
dependencies = [
  "fastapi>=0.112.1",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "authlib>=1.3.1",
  "uvicorn>=0.30.6",
  "itsdangerous>=2.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["black>=24.8.0", "isort>=5.13.2"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_with_google_rye"]

[project.scripts]
start = "fastapi_with_google_rye.main:main"
